Added changes for user messages and bot messages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "prettier.semi": false,
   "prettier.trailingComma": "es5",
   "prettier.jsxSingleQuote": true,
-  "prettier.arrowParens": "avoid"
+  "prettier.arrowParens": "avoid",
+  "editor.formatOnSave": null,
 }
