--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Login to dmv npm registory
+      run: echo -e "octocat\n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}}\nrichard.bach@dmv.ca.gov" | npm login --registry=https://npm.pkg.github.com    
     - name: Install dependencies
       run: npm install
     - name: Lint
@@ -26,6 +28,8 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - name: Login to dmv npm registory
+      run: echo -e "octocat\n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}}\nrichard.bach@dmv.ca.gov" | npm login --registry=https://npm.pkg.github.com    
     - name: Install dependencies
       run: npm install
     - name: Test
