--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -13,8 +13,9 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - run: npm install -g npm-cli-login
     - name: Login to dmv npm registory
-      run: echo -e "octocat\n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}}\nrichard.bach@dmv.ca.gov" | npm login --registry=https://npm.pkg.github.com    
+      run: npm-cli-login -u octocat -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
     - name: Install dependencies
       run: npm install
     - name: Lint
@@ -22,14 +23,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2 
     - uses: actions/setup-node@v2
       with:
         node-version: '16'
+    - run: npm install -g npm-cli-login
     - name: Login to dmv npm registory
-      run: echo -e "octocat\n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}}\nrichard.bach@dmv.ca.gov" | npm login --registry=https://npm.pkg.github.com    
+      run: npm-cli-login -u octocat -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
     - name: Install dependencies
       run: npm install
     - name: Test
