--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -15,7 +15,7 @@ jobs:
         node-version: '16'
     - run: npm install -g npm-cli-login
     - name: Login to dmv npm registory
-      run: npm-cli-login -u octocat -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
+      run: npm-cli-login -u rbach-dmv -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
     - name: Install dependencies
       run: npm install
     - name: Lint
@@ -30,7 +30,7 @@ jobs:
         node-version: '16'
     - run: npm install -g npm-cli-login
     - name: Login to dmv npm registory
-      run: npm-cli-login -u octocat -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
+      run: npm-cli-login -u rbach-dmv -p n${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
     - name: Install dependencies
       run: npm install
     - name: Test
