--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     branches:
-      - 032802432428-dev
+      - QBPM-10-DEV
     types: [closed]
 jobs:
   deploy:
@@ -14,7 +14,7 @@ jobs:
     - run: echo ${{ github.ref }}   
     - name: Set environment variables
       run: |
-        if [[ ${{ github.ref }} == '032802432428-DEV' ]]; then
+        if [[ ${{ github.ref }} == 'QBPM-10-DEV' ]]; then
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_032802432428_DEV }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_032802432428_DEV   }}" >> $GITHUB_ENV
         elif [[ ${{ github.ref }} == '595657360061-UAT' ]]; then
