--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+name: Deploy
 on:
   pull_request:
     branches:
@@ -7,10 +8,12 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
         node-version: '16'    
+    - run: echo foobar
     - run: echo ${{ github.ref }}   
     - name: Set environment variables
       run: |
