--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
         else
           echo 'Unknown branch for deploying to'
         fi
-    # - run: npm install -g npm-cli-login
-    # - name: Login to dmv npm registory
-    #   run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
-    # - run: npm install 
-    # - run: npm run build
+    - run: npm install -g npm-cli-login
+    - name: Login to dmv npm registory
+      run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
+    - run: npm install 
+    - run: npm run build
     - name: Deploy
       run: aws s3 sync build/ s3://miles-chatbot-${{ github.ref }} --acl public-read
