--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,13 @@ jobs:
       with:
         node-version: '16'    
     - run: echo foobar
-    - run: echo ${{ github.ref }}   
-    - name: Set environment variables
+    - run: echo ${{ github.ref }}
+    # - run: npm install -g npm-cli-login
+    # - name: Login to dmv npm registory
+    #   run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
+    # - run: npm install 
+    # - run: npm run build    
+    - name: Deploy
       run: |
         if [[ "${{ github.ref }}" == "QBPM-10-DEV" ]]; then
           echo "Setting up dev environment"
@@ -28,10 +33,5 @@ jobs:
         else
           echo 'Unknown branch for deploying to'
         fi
-    - run: npm install -g npm-cli-login
-    - name: Login to dmv npm registory
-      run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
-    - run: npm install 
-    - run: npm run build
-    - name: Deploy
-      run: aws s3 sync build/ s3://miles-chatbot-${{ github.ref }} --acl public-read
+
+        aws s3 sync public/ s3://miles-chatbot-${{ github.ref }} --acl public-read
