--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: '16'    
     - run: echo ${{ github.ref }}   
-    - name: Deploy
+    - name: Set Environment
       run: |
         if [[ "${{ github.ref }}" == "QBPM-10-DEV" ]]; then
           echo "Setting up dev environment"
