--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,6 @@ jobs:
         aws-region: us-west-2
         role-duration-seconds: 1200
     - name: Deploy
-      run: aws s3 sync public/ s3://miles-chatbot-${{ github.ref }} --acl public-read
+      #run: aws s3 sync public/ s3://miles-chatbot-${{ github.ref }} --acl public-read
+      run: aws s3 sync public/ s3://miles-chatbot-qbpm-dev-10 --acl public-read
 
