--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,22 @@ jobs:
     - run: echo ${{ github.ref }}   
     - name: Set Environment
       run: |
-        if [[ "${{ github.ref }}" == "QBPM-10-DEV" ]]; then
+        if [[ "${{ github.ref }}" == "032802432428_dev" ]]; then
           echo "Setting up dev environment"
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_032802432428_DEV }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_032802432428_DEV   }}" >> $GITHUB_ENV
-        elif [[ "${{ github.ref }}" == "595657360061-UAT" ]]; then
+        elif [[ "${{ github.ref }}" == "595657360061-uat" ]]; then
           echo "Setting up uat environment"
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_595657360061_UAT }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_595657360061_UAT }}" >> $GITHUB_ENV
         else
           echo 'Unknown branch for deploying to'
         fi
-    # - run: npm install -g npm-cli-login
-    # - name: Login to dmv npm registory
-    #   run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
-    # - run: npm install 
-    # - run: npm run build
+    - run: npm install -g npm-cli-login
+    - name: Login to dmv npm registory
+      run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
+    - run: npm install 
+    - run: npm run build
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -40,6 +40,4 @@ jobs:
         aws-region: us-west-2
         role-duration-seconds: 1200
     - name: Deploy
-      #run: aws s3 sync public/ s3://miles-chatbot-${{ github.ref }} --acl public-read
-
-      run: aws s3 sync public/ s3://miles-chatbot-qbpm-10-dev --acl public-read
+      run: aws s3 sync build/ s3://miles-chatbot-${{ github.ref }} --acl public-read
