--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
         else
           echo 'Unknown branch for deploying to'
         fi
+    - name: Determine .env file
+      run: |
+        cp config/env.${{ github.ref }} ./.env
     - run: npm install -g npm-cli-login
     - name: Login to dmv npm registory
       run: npm-cli-login -u octocat -p ${{secrets.DMV_GITHUB_PERSONAL_ACCESS_TOKEN}} -e richard.bach@dmv.ca.gov -r https://npm.pkg.github.com
