No getmessage timeout (#92)
* 1.14.2

* remove timeout on getMessage axios call

* change version back to 1.14.1 ( what happened ) added start-pc

Co-authored-by: rbach-dmv <richard.bach@dmv.ca.gov>

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-pc": "PORT=3006 react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject",
